upto display table

--- a/day5.html
+++ b/day5.html
@@ -30,7 +30,7 @@
         <img src="cartoon.png" width="300" alt="cartoon">
         <h3>Let's Learn Multipication Table</h3>
         <input type="number"  id="number" placeholder="Enter a number" required><br><br>
-        <button onclick="genrateTable()">Submit</button>
+        <button onclick="generateTable()">Submit</button>
         <div id="display">
         </div>
     </section>
